feat: add /embed_sparse route (#191)
